test/loop/confidence/errors/index_errors_2.loop
# Errors in pattern matching functions

func() ->
  x[1 ->

